--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "nodemon": "^2.0.7",
+    "react-router-dom": "^5.2.0",
     "style-loader": "^2.0.0",
     "webpack": "^4.45.0",
     "webpack-cli": "^3.3.12",
