--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nodemon": "^2.0.7",
     "react-router-dom": "^5.2.0",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^4.45.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
